--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -48,7 +48,7 @@ section {
 body {
   font: 14px/1.5 'Microsoft YaHei', '宋体', Tahoma, Arial, sans-serif;
   color: #555;
-  background-color: #d4b6b6;
+  background-color: #f8eeee;
 }
 
 /*去除边框*/
